--- a/web/packages/web/src/presentation/MainLayout.module.css
+++ b/web/packages/web/src/presentation/MainLayout.module.css
@@ -4,6 +4,7 @@
   height: 100%;
   height: 100svh;
   height: calc(var(--vh, 1svh) * 100);
+  padding-top: env(safe-area-inset-top);
 }
 
 .content {
